tests/negative/pattern/non-exhaustive-sum.orng
fn main() -> Int {
    let const My_Sum = (a | b | c | d)
    let my_val: My_Sum = .a
    match my_val {
        .a => 4
        .b => 5
        .c => 6
    }
}